# cpp_samples

./: .gitignore  CMakeLists.txt  README.md
scripts/: build.sh
scripts/style_check/: run_clang_tidy.py
std/: CMakeLists.txt
std/any/: CMakeLists.txt  any.hpp  test.cpp
std/shared_ptr/: .clang-tidy-hint  CMakeLists.txt  shared_ptr.cpp  shared_ptr.hpp  test  test.cpp
test/: CMakeLists.txt
test/std/: CMakeLists.txt
test/std/any/: CMakeLists.txt  test.cpp
test/std/shared_ptr/: CMakeLists.txt  test.cpp
